--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,51 +25,62 @@ jobs:
       
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        with:
+          enablement: true  # Auto-enable Pages if not already enabled
       
       - name: Build static site
         run: |
           mkdir -p _site
           cp -r briefings/* _site/
           
-          # Generate index.html from index.md if exists
-          if [ -f "pages/index.html" ]; then
-            cp pages/* _site/
-          else
-            # Create simple index
-            cat > _site/index.html << 'EOF'
+          # Create index.html
+          cat > _site/index.html << 'EOF'
           <!DOCTYPE html>
           <html>
           <head>
               <meta charset="UTF-8">
               <title>AI Daily Briefing</title>
               <style>
-                  body { font-family: -apple-system, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
-                  h1 { color: #333; }
-                  table { width: 100%; border-collapse: collapse; }
+                  body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; 
+                         max-width: 900px; margin: 0 auto; padding: 20px; line-height: 1.6; }
+                  h1 { color: #333; border-bottom: 2px solid #0066cc; padding-bottom: 10px; }
+                  h2 { color: #555; margin-top: 30px; }
+                  table { width: 100%; border-collapse: collapse; margin: 20px 0; }
                   th, td { text-align: left; padding: 12px; border-bottom: 1px solid #ddd; }
+                  th { background: #f5f5f5; font-weight: 600; }
                   a { color: #0066cc; text-decoration: none; }
                   a:hover { text-decoration: underline; }
+                  .stats { background: #f9f9f9; padding: 15px; border-radius: 8px; margin: 20px 0; }
+                  .update-time { color: #666; font-size: 0.9em; margin-top: 30px; }
               </style>
           </head>
           <body>
               <h1>🤖 AI Daily Briefing</h1>
-              <p>每日 AI 动态简报归档</p>
-              <table>
-                  <tr><th>日期</th><th>链接</th></tr>
+              <p>每日 AI 动态简报归档 - 由 ai-daily-briefing skill 自动生成</p>
           EOF
           
-          # Add rows for each briefing
-          for f in $(ls -1 _site/*.md | sort -r | head -30); do
+          # Add stats
+          count=$(ls -1 _site/*.md 2>/dev/null | wc -l)
+          echo "<div class='stats'>📊 共收录 <strong>$count</strong> 篇简报</div>" >> _site/index.html
+          
+          # Add table
+          echo "<h2>📅 简报列表</h2>" >> _site/index.html
+          echo "<table><tr><th>日期</th><th>链接</th></tr>" >> _site/index.html
+          
+          for f in $(ls -1 _site/*.md 2>/dev/null | sort -r | head -50); do
               date=$(basename $f .md)
-              echo "<tr><td>$date</td><td><a href=\"$date.md\">查看简报</a></td></tr>" >> _site/index.html
+              echo "<tr><td>$date</td><td><a href=\"$date.md\">📄 查看简报</a></td></tr>" >> _site/index.html
           done
           
           cat >> _site/index.html << 'EOF'
               </table>
+              <p class='update-time'>最后更新: EOF
+          date >> _site/index.html
+          cat >> _site/index.html << 'EOF'
+          </p>
           </body>
           </html>
           EOF
-          fi
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
@@ -86,3 +97,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          preview: false
