Fix charset issues in HTML generation
- Add http-equiv Content-Type meta tag
- Add @charset UTF-8 to CSS
- Add X-UA-Compatible meta for IE

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -45,9 +45,12 @@ jobs:
           <html lang="zh-CN">
           <head>
               <meta charset="UTF-8">
+              <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
               <meta name="viewport" content="width=device-width, initial-scale=1.0">
-              <title>AI Daily Briefing</title>
+              <meta http-equiv="X-UA-Compatible" content="IE=edge">
+              <title>AI Daily Briefing - AI 动态简报</title>
               <style>
+                  @charset "UTF-8";
                   :root {
                       --primary: #0066cc;
                       --primary-dark: #0052a3;
